Menyelesaikan section footer sekaligus mengakhiri perjalanan di landing page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
   </nav>
 
+  <!-- content -->
   <div class="container-fluid">
     <!-- hero -->
     <section class="hero row">
@@ -159,34 +160,21 @@
     </section>
   </div>
 
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
+  <!-- footer -->
+  <footer class="back-primary color-blue">
+    <div class="top">
+      <h1 class="display-5 mb-4">Eat, Cook, Repeat</h1>
+      <p>Share your best recipe by uploading here !</p>
+    </div>
+    <div class="bottom">
+      <ul class="m-0 p-0">
+        <li><a class="color-blue" href="">Product</a></li>
+        <li><a class="color-blue" href="">Company</a></li>
+        <li><a class="color-blue" href="">Learn More</a></li>
+        <li><a class="color-blue" href="">Get In Touch</a></li>
+      </ul>
+    </div>
+  </footer>
 
   <script src="./assets/js/navbar.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
