--- a/detail.html
+++ b/detail.html
@@ -66,7 +66,7 @@
       </div>
       <div class="video-step mb-5">
         <h1 class="fs-2 mb-3">Video Step</h1>
-        <a href="/detail.html" class="btn back-primary text-light"><i class="fas fa-play"></i></a>
+        <a href="/video.html" class="btn back-primary text-light"><i class="fas fa-play"></i></a>
       </div>
       <div class="form-comment mb-4">
         <form>
