Refactor kode dan menambahkan icon bookmark & like di image detail recipee

--- a/video.html
+++ b/video.html
@@ -20,7 +20,7 @@
   <!-- navbar -->
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-transparent py-2 py-md-4 ff-airbnb" id="navbar">
     <div class="container">
-      <a class="navbar-brand d-md-none" href="#">
+      <a class="navbar-brand d-md-none" href="/index.html">
         <img src="./assets/icon/logo-black.svg" width="45px" height="45px" alt="App Icon">
         <span>Food Recipe</span>
       </a>
@@ -52,7 +52,7 @@
           <div class="col-1 back-primary"></div>
           <div class="col-11">
             <div class="video mx-1 mx-sm-3 mx-md-5">
-              <img src="./assets/img/video.webp" alt="">
+              <img src="./assets/img/video.webp" alt="Beef Steak with Curry Sauce">
               <p class="fs-4 mt-3 mb-1">Beef Steak with Curry Sauce</p>
               <p class="text-secondary">3 Month Ago</p>
             </div>
@@ -63,21 +63,21 @@
         <div class="other">
           <p class="fs-4">Other Recipe</p>
           <div class="card my-2 mx-2 border-0">
-            <img src="./assets/img/popular-1.webp" class="card-img-top" alt="...">
+            <img src="./assets/img/popular-1.webp" class="card-img-top" alt="Chiken Kare">
             <div class="card-body">
               <h5 class="card-title">Chiken Kare</h5>
               <p class="text-secondary">HanaLohana - 3 month ago</p>
             </div>
           </div>
           <div class="card my-2 mx-2 border-0">
-            <img src="./assets/img/popular-2.webp" class="card-img-top" alt="...">
+            <img src="./assets/img/popular-2.webp" class="card-img-top" alt="Bomb Chicken">
             <div class="card-body">
               <h5 class="card-title">Bomb Chicken</h5>
               <p class="text-secondary">HanaLohana - 3 month ago</p>
             </div>
           </div>
           <div class="card my-2 mx-2 border-0">
-            <img src="./assets/img/popular-3.webp" class="card-img-top" alt="...">
+            <img src="./assets/img/popular-3.webp" class="card-img-top" alt="Banana Smothie Pop">
             <div class="card-body">
               <h5 class="card-title">Banana Smothie Pop</h5>
               <p class="text-secondary">HanaLohana - 3 month ago</p>
