--- a/detail.html
+++ b/detail.html
@@ -21,7 +21,7 @@
   <!-- navbar -->
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-transparent py-2 py-md-4 ff-airbnb" id="navbar">
     <div class="container">
-      <a class="navbar-brand d-md-none" href="#">
+      <a class="navbar-brand d-md-none" href="/index.html">
         <img src="./assets/icon/logo-black.svg" width="45px" height="45px" alt="App Icon">
         <span>Food Recipe</span>
       </a>
@@ -49,8 +49,12 @@
   <div class="container">
     <div class="detail ff-airbnb">
       <h1 class="display-5 text-center color-blue">Loream Sandwich</h1>
-      <div class="text-center mb-5">
-        <img class="mt-4" src="./assets/img/landing-hero.webp" alt="">
+      <div class="text-center mb-5 position-relative">
+        <img class="mt-4" src="./assets/img/landing-hero.webp" alt="Recipe Image">
+        <div class="icon">
+          <i class="icon-item back-primary far fa-bookmark text-light p-3 fs-5 rounded-3 me-1"></i>
+          <i class="icon-item bg-light far fa-thumbs-up color-primary p-3 fs-5 rounded-3 ms-1"></i>
+        </div>
       </div>
       <div class="ingredients mb-4">
         <h1 class="fs-2 mb-3">Ingredients</h1>
@@ -82,12 +86,12 @@
         <h1 class="fs-2 mb-3">Comment</h1>
         <div class="row">
           <div class="col-3 col-sm-2 col-lg-1 d-flex justify-content-center">
-            <div class="">
-              <img src="./assets/img/ayudia.webp" class="rounded-circle" alt="">
-            </div>
+            <a href="/profile.html">
+              <img src="./assets/img/ayudia.webp" class="rounded-circle" alt="Photo Profile">
+            </a>
           </div>
           <div class="col-9 col-sm-10 col-lg-11 d-flex flex-column justify-content-center">
-            <p class="m-0"><strong>Ayudia</strong></p>
+            <a href="/profile.html" class="m-0 text-decoration-none text-dark"><strong>Ayudia</strong></a>
             <p class="m-0 text-break">Nice recipe. simple and delicious, thankyou.</p>
           </div>
         </div>
@@ -99,14 +103,14 @@
   <footer class="ff-airbnb back-primary color-blue">
     <div class="top">
       <h1 class="display-5 mb-4">Eat, Cook, Repeat</h1>
-      <p>Share your best recipe by uploading here !</p>
+      <p class="mx-3 text-center">Share your best recipe by uploading here !</p>
     </div>
     <div class="bottom">
       <ul class="m-0 p-0">
-        <li><a class="color-blue" href="">Product</a></li>
-        <li><a class="color-blue" href="">Company</a></li>
-        <li><a class="color-blue" href="">Learn More</a></li>
-        <li><a class="color-blue" href="">Get In Touch</a></li>
+        <li><a class="color-blue" href="#">Product</a></li>
+        <li><a class="color-blue" href="#">Company</a></li>
+        <li><a class="color-blue" href="#">Learn More</a></li>
+        <li><a class="color-blue" href="#">Get In Touch</a></li>
       </ul>
     </div>
   </footer>
