--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- navbar -->
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-transparent py-2 py-md-4 ff-airbnb" id="navbar">
     <div class="container">
-      <a class="navbar-brand d-md-none" href="#">
+      <a class="navbar-brand d-md-none" href="/index.html">
         <img src="./assets/icon/logo-black.svg" width="45px" height="45px" alt="App Icon">
         <span>Food Recipe</span>
       </a>
@@ -58,8 +58,8 @@
       <div class="content col-10 col-sm-9 d-flex flex-column justify-content-center ff-airbnb">
         <h1 class="display-5 mb-3">Discover Recipe & Delicious Food</h1>
         <div class="search mb-3">
-          <label class="py-2 px-4" for="searchInput"><i class="fas fa-search"></i></label>
-          <input type="search" class="form-control p-3" id="searchInput" placeholder="Search Restaurant, Food">
+          <label class="py-2 px-4" for="search"><i class="fas fa-search"></i></label>
+          <input type="search" class="form-control p-3" id="search" placeholder="Search Restaurant, Food">
         </div>
       </div>
       <div class="decoration col-2 col-sm-3 d-flex align-items-center back-primary">
@@ -177,14 +177,14 @@
   <footer class="ff-airbnb back-primary color-blue">
     <div class="top">
       <h1 class="display-5 mb-4">Eat, Cook, Repeat</h1>
-      <p>Share your best recipe by uploading here !</p>
+      <p class="mx-3 text-center">Share your best recipe by uploading here !</p>
     </div>
     <div class="bottom">
       <ul class="m-0 p-0">
-        <li><a class="color-blue" href="">Product</a></li>
-        <li><a class="color-blue" href="">Company</a></li>
-        <li><a class="color-blue" href="">Learn More</a></li>
-        <li><a class="color-blue" href="">Get In Touch</a></li>
+        <li><a class="color-blue" href="#">Product</a></li>
+        <li><a class="color-blue" href="#">Company</a></li>
+        <li><a class="color-blue" href="#">Learn More</a></li>
+        <li><a class="color-blue" href="#">Get In Touch</a></li>
       </ul>
     </div>
   </footer>
