--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
               <input type="checkbox" class="form-check-input" id="terms">
               <label class="form-check-label" for="terms">I agree to terms and conditions</label>
             </div>
-            <button type="submit" class="btn back-primary w-100 text-light mb-2">Log in</button>
+            <button type="submit" class="btn back-primary w-100 text-light mb-2">Register Account</button>
           </form>
           <!-- end form -->
           <p class="text-center text-secondary mt-4 ff-airbnb">
