Menambahkan link untuk bagian other di halaman detail video dan mengubah background navbar menjadi putih + shadow

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           </li>
         </ul>
         <div class="right-menu d-flex align-items-center">
-          <div class="icon bg-light p-2 rounded-circle">
+          <div class="icon bg-light p-2 rounded-circle border">
             <i class="fas fa-user"></i>
           </div>
-          <a class="ms-2 text-white" href="/login.html">Login</a>
+          <a class="nav-login ms-2 text-white" href="/login.html">Login</a>
         </div>
       </div>
     </div>
