--- a/video.html
+++ b/video.html
@@ -50,7 +50,7 @@
       <div class="col-12 col-lg-9">
         <div class="row change vh-100">
           <div class="col-1 back-primary"></div>
-          <div class="col-11">
+          <div class="col-11 d-flex justify-content-center">
             <div class="video mx-1 mx-sm-3 mx-md-5">
               <img src="./assets/img/video.webp" alt="Beef Steak with Curry Sauce">
               <p class="fs-4 mt-3 mb-1">Beef Steak with Curry Sauce</p>
@@ -65,22 +65,26 @@
           <div class="card my-2 mx-2 border-0">
             <img src="./assets/img/popular-1.webp" class="card-img-top" alt="Chiken Kare">
             <div class="card-body">
-              <h5 class="card-title">Chiken Kare</h5>
-              <p class="text-secondary">HanaLohana - 3 month ago</p>
+              <h5 class="card-title"><a class="text-decoration-none text-dark" href="/detail.html">Chiken Kare</a></h5>
+              <p class="text-secondary"><a href="/profile.html"
+                  class="text-secondary text-decoration-none">HanaLohana</a> - 3 month ago</p>
             </div>
           </div>
           <div class="card my-2 mx-2 border-0">
             <img src="./assets/img/popular-2.webp" class="card-img-top" alt="Bomb Chicken">
             <div class="card-body">
-              <h5 class="card-title">Bomb Chicken</h5>
-              <p class="text-secondary">HanaLohana - 3 month ago</p>
+              <h5 class="card-title"><a class="text-decoration-none text-dark" href="/detail.html">Bomb Chicken</a></h5>
+              <p class="text-secondary"><a href="/profile.html"
+                  class="text-secondary text-decoration-none">HanaLohana</a> - 3 month ago</p>
             </div>
           </div>
           <div class="card my-2 mx-2 border-0">
             <img src="./assets/img/popular-3.webp" class="card-img-top" alt="Banana Smothie Pop">
             <div class="card-body">
-              <h5 class="card-title">Banana Smothie Pop</h5>
-              <p class="text-secondary">HanaLohana - 3 month ago</p>
+              <h5 class="card-title"><a class="text-decoration-none text-dark" href="/detail.html">Banana Smothie
+                  Pop</a></h5>
+              <p class="text-secondary"><a href="/profile.html"
+                  class="text-secondary text-decoration-none">HanaLohana</a> - 3 month ago</p>
             </div>
           </div>
         </div>
