Membuat halaman add recipe

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
         <div class="right-menu d-flex align-items-center">
           <div class="icon bg-light p-2 rounded-circle border">
-            <i class="fas fa-user"></i>
+            <i class="far fa-user"></i>
           </div>
           <a class="nav-login ms-2 text-white" href="/login.html">Login</a>
         </div>
