Merefactor kode agar lebih semantic, lalu membuat struktur dasar halaman profile

--- a/edit.html
+++ b/edit.html
@@ -14,7 +14,7 @@
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Food Recipe - Add Recipe</title>
+  <title>Food Recipe - Edit Recipe</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
   <!-- content -->
   <div class="container mb-5">
     <section class="add ff-airbnb">
-      <form action="./index.html">
+      <form action="./profile.html">
         <div class="photo mb-3">
           <i class="fs-4 far fa-image"></i>
           <p class="mt-2">Add Photo</p>
@@ -63,7 +63,7 @@
           <input type="text" class="form-control form-control-sm p-3" id="video" placeholder="Video">
         </div>
         <div class="d-flex justify-content-center">
-          <button type="submit" class="btn back-primary w-100 text-light mb-2">Post</button>
+          <button type="submit" class="btn back-primary w-100 text-light mb-2">Update</button>
         </div>
       </form>
     </section>
