--- a/video.html
+++ b/video.html
@@ -47,7 +47,7 @@
   <!-- content -->
   <div class="container-fluid">
     <div class="row ff-airbnb">
-      <div class="col-12 col-lg-9">
+      <section class="col-12 col-lg-9">
         <div class="row change vh-100">
           <div class="col-1 back-primary"></div>
           <div class="col-11 d-flex justify-content-center">
@@ -58,8 +58,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="d-none col-lg-3 d-lg-block">
+      </section>
+      <aside class="col-lg-3 d-none d-lg-block">
         <div class="other">
           <p class="fs-4">Other Recipe</p>
           <div class="card my-2 mx-2 border-0">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </aside>
     </div>
   </div>
 
