--- a/detail.html
+++ b/detail.html
@@ -47,7 +47,7 @@
 
   <!-- content -->
   <div class="container">
-    <div class="detail ff-airbnb">
+    <section class="detail ff-airbnb mb-5">
       <h1 class="display-5 text-center color-blue">Loream Sandwich</h1>
       <div class="text-center mb-5 position-relative">
         <img class="mt-4" src="./assets/img/landing-hero.webp" alt="Recipe Image">
@@ -68,10 +68,12 @@
           <li>crisps , to serve</li>
         </ul>
       </div>
-      <div class="video-step mb-5">
+      <div class="video-step">
         <h1 class="fs-2 mb-3">Video Step</h1>
         <a href="/video.html" class="btn back-primary text-light"><i class="fas fa-play"></i></a>
       </div>
+    </section>
+    <section class="comment ff-airbnb mb-10">
       <div class="form-comment mb-4">
         <form>
           <div class="mb-3">
@@ -82,7 +84,7 @@
           </div>
         </form>
       </div>
-      <div class="list-comment mb-5">
+      <div class="list-comment">
         <h1 class="fs-2 mb-3">Comment</h1>
         <div class="row">
           <div class="col-3 col-sm-2 col-lg-1 d-flex justify-content-center">
@@ -96,7 +98,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </div>
 
   <!-- footer -->
