--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="side col-sm-5 col-md-6 d-none d-sm-flex">
         <div class="icon text-center w-100">
-          <img src="./assets/icon/logo.svg" width="100px" height="120px" alt="App Icon">
+          <a href="./index.html"><img src="./assets/icon/logo.svg" width="100px" height="120px" alt="App Icon"></a>
         </div>
       </div>
       <div class="auth login col-sm-7 col-md-6">
@@ -35,8 +35,7 @@
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control form-control-sm p-3" id="password" placeholder="Password"
-              >
+              <input type="password" class="form-control form-control-sm p-3" id="password" placeholder="Password">
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="terms">
