--- a/profile.html
+++ b/profile.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
   <link rel="stylesheet" href="./assets/css/navbar.css">
-  <link rel="stylesheet" href="./assets/css/add.css">
+  <link rel="stylesheet" href="./assets/css/profile.css">
   <link rel="stylesheet" href="./assets/css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Food Recipe - Add Recipe</title>
+  <title>Food Recipe - Profile</title>
 </head>
 
 <body>
@@ -35,10 +35,10 @@
             <a class="nav-link" href="/index.html"><span>Home</span></a>
           </li>
           <li class="nav-item me-5">
-            <a class="nav-link" href="/add.html"><span class="active">Add Recipe</span></a>
+            <a class="nav-link" href="/add.html"><span>Add Recipe</span></a>
           </li>
           <li class="nav-item me-5">
-            <a class="nav-link" href="/profile.html"><span>Profile</span></a>
+            <a class="nav-link" href="/profile.html"><span class="active">Profile</span></a>
           </li>
         </ul>
       </div>
@@ -46,27 +46,10 @@
   </nav>
 
   <!-- content -->
-  <div class="container mb-5">
-    <section class="add ff-airbnb">
-      <form action="./index.html">
-        <div class="photo mb-3">
-          <i class="fs-4 far fa-image"></i>
-          <p class="mt-2">Add Photo</p>
-        </div>
-        <div class="mb-3">
-          <input type="text" class="form-control form-control-sm p-3" id="title" placeholder="Title">
-        </div>
-        <div class="mb-3">
-          <textarea class="form-control" id="ingredients" rows="10" placeholder="Ingredients"></textarea>
-        </div>
-        <div class="mb-3">
-          <input type="text" class="form-control form-control-sm p-3" id="video" placeholder="Video">
-        </div>
-        <div class="d-flex justify-content-center">
-          <button type="submit" class="btn back-primary w-100 text-light mb-2">Post</button>
-        </div>
-      </form>
-    </section>
+  <div class="container">
+    <div class="profile">
+      <h1>Manusia Api</h1>
+    </div>
   </div>
 
   <!-- footer -->
