--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="side col-sm-5 col-md-6 d-none d-sm-flex">
         <div class="icon text-center w-100">
-          <img src="./assets/icon/logo.svg" width="100px" height="120px" alt="App Icon">
+          <a href="./index.html"><img src="./assets/icon/logo.svg" width="100px" height="120px" alt="App Icon"></a>
         </div>
       </div>
       <div class="auth register col-sm-7 col-md-6">
