Refactor kode sedikit

--- a/add.html
+++ b/add.html
@@ -47,6 +47,7 @@
 
   <!-- content -->
   <div class="container mb-5">
+    <!-- add -->
     <section class="add ff-airbnb">
       <form action="./index.html">
         <div class="photo mb-3">
