--- a/detail.html
+++ b/detail.html
@@ -47,6 +47,7 @@
 
   <!-- content -->
   <div class="container">
+    <!-- detail -->
     <section class="detail ff-airbnb mb-5">
       <h1 class="display-5 text-center color-blue">Loream Sandwich</h1>
       <div class="text-center mb-5 position-relative">
@@ -73,6 +74,7 @@
         <a href="/video.html" class="btn back-primary text-light"><i class="fas fa-play"></i></a>
       </div>
     </section>
+    <!-- comment -->
     <section class="comment ff-airbnb mb-10">
       <div class="form-comment mb-4">
         <form>
