--- a/edit.html
+++ b/edit.html
@@ -47,6 +47,7 @@
 
   <!-- content -->
   <div class="container mb-5">
+    <!-- edit -->
     <section class="add ff-airbnb">
       <form action="./profile.html">
         <div class="photo mb-3">
