--- a/profile.html
+++ b/profile.html
@@ -47,6 +47,7 @@
 
   <!-- content -->
   <div class="container mb-5">
+    <!-- profile -->
     <section class="profile ff-airbnb text-center mb-5">
       <div class="d-flex justify-content-center">
         <div class="position-relative bg-dark">
@@ -56,6 +57,7 @@
       </div>
       <p class="fs-5 mt-3">Garneta Sharina</p>
     </section>
+    <!-- recipe -->
     <section class="recipe ff-airbnb">
       <ul class="nav nav-tabs">
         <li class="nav-item">
