--- a/video.html
+++ b/video.html
@@ -47,6 +47,7 @@
   <!-- content -->
   <div class="container-fluid">
     <div class="row ff-airbnb">
+      <!-- video -->
       <section class="col-12 col-lg-9">
         <div class="row change vh-100">
           <div class="col-1 back-primary"></div>
@@ -59,6 +60,7 @@
           </div>
         </div>
       </section>
+      <!-- other recipe -->
       <aside class="col-lg-3 d-none d-lg-block">
         <div class="other">
           <p class="fs-4">Other Recipe</p>
