Memperbaiki error lightshouse Background and foreground colors do not have a sufficient contrast ratio.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p>
               Quick + Easy Chicken Bone Broth Ramen- Healthy chicken ramen in a hurry? That’s right!
             </p>
-            <a href="/detail.html" class="btn back-primary text-light" style="width: 150px;">Learn More</a>
+            <a href="/detail.html" class="btn back-primary" style="width: 150px; color: aliceblue;">Learn More</a>
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
             <p>
               Quick + Easy Chicken Bone Broth Ramen- Healthy chicken ramen in a hurry? That’s right!
             </p>
-            <a href="/detail.html" class="btn back-primary text-light" style="width: 150px;">Learn More</a>
+            <a href="/detail.html" class="btn back-primary" style="width: 150px; color: rgb(219, 227, 235);">Learn More</a>
           </div>
         </div>
       </div>
