--- a/edit.html
+++ b/edit.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="/index.html"><span>Home</span></a>
           </li>
           <li class="nav-item me-5">
-            <a class="nav-link" href="/add.html"><span class="active">Add Recipe</span></a>
+            <a class="nav-link" href="/add.html"><span>Add Recipe</span></a>
           </li>
           <li class="nav-item me-5">
             <a class="nav-link" href="/profile.html"><span>Profile</span></a>
