Menambahkan meta tag untuk SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Food Recipe HTML">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap 5">
+  <meta name="author" content="Andry Pebrianto">
 
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
@@ -84,7 +87,7 @@
             <p>
               Quick + Easy Chicken Bone Broth Ramen- Healthy chicken ramen in a hurry? That’s right!
             </p>
-            <a href="/detail.html" class="btn back-primary" style="width: 150px; color: aliceblue;">Learn More</a>
+            <a href="/detail.html" class="btn back-primary text-light" style="width: 150px;">Learn More</a>
           </div>
         </div>
       </div>
@@ -107,7 +110,7 @@
             <p>
               Quick + Easy Chicken Bone Broth Ramen- Healthy chicken ramen in a hurry? That’s right!
             </p>
-            <a href="/detail.html" class="btn back-primary" style="width: 150px; color: rgb(219, 227, 235);">Learn More</a>
+            <a href="/detail.html" class="btn back-primary text-light" style="width: 150px;">Learn More</a>
           </div>
         </div>
       </div>
