--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Food Recipe HTML">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Bootstrap 5">
+  <meta name="author" content="Andry Pebrianto">
 
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
