--- a/detail.html
+++ b/detail.html
@@ -62,15 +62,13 @@
       </div>
       <div class="ingredients mb-4">
         <h1 class="fs-2 mb-3">Ingredients</h1>
-        <ul>
-          <li>2 eggs</li>
-          <li>2 tbsp mayonnaise</li>
-          <li>3 slices bread</li>
-          <li>a little butter</li>
-          <li>⅓ carton of cress</li>
-          <li>2-3 slices of tomato or a lettuce leaf and a slice of ham or cheese</li>
-          <li>crisps , to serve</li>
-        </ul>
+          - 2 Eggs <br>
+          - 2 Tbsp mayonnaise <br>
+          - 3 Slices bread <br>
+          - a Little butter <br>
+          - ⅓ Carton of cress <br>
+          - 2-3 Slices of tomato or a lettuce leaf and a slice of ham or cheese <br>
+          - Crisps , to serve
       </div>
       <div class="video-step">
         <h1 class="fs-2 mb-3">Video Step</h1>
