Melakukan revisi untuk navbar menggantung dan bg color delete

--- a/profile.html
+++ b/profile.html
@@ -80,8 +80,8 @@
               <img src="./assets/img/profile-recipe2.webp" alt="Recipe 2">
               <p class="title text-white">Bomb <br> Chicken</p>
               <div class="action">
-                <a href="/edit.html"><i class="far fa-edit text-light bg-success p-2"></i></a>
-                <a href="#"><i class="far fa-trash-can text-light bg-danger p-2"></i></a>
+                <a href="/edit.html"><i class="far fa-edit text-dark back-primary p-2"></i></a>
+                <a href="#"><i class="far fa-trash-can text-dark back-primary p-2"></i></a>
               </div>
             </div>
           </div>
@@ -92,8 +92,8 @@
               <img src="./assets/img/profile-recipe1.webp" alt="Recipe 1">
               <p class="title text-white">Bananas <br> Pancake</p>
               <div class="action">
-                <a href="/edit.html"><i class="far fa-edit text-light bg-success p-2"></i></a>
-                <a href="#"><i class="far fa-trash-can text-light bg-danger p-2"></i></a>
+                <a href="/edit.html"><i class="far fa-edit text-dark back-primary p-2"></i></a>
+                <a href="#"><i class="far fa-trash-can text-dark back-primary p-2"></i></a>
               </div>
             </div>
           </div>
